--- a/DillonColeman-SkyPayAssessment/DillonColeman-SkyPayAssessment.csproj
+++ b/DillonColeman-SkyPayAssessment/DillonColeman-SkyPayAssessment.csproj
@@ -23,12 +23,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Helpers\temp\" />
     <Folder Include="Migrations\" />
   </ItemGroup>
 
