--- a/DillonColeman-SkyPayAssessment/DillonColeman-PaySkyAssessment.csproj
+++ b/DillonColeman-SkyPayAssessment/DillonColeman-PaySkyAssessment.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>false</InvariantGlobalization>
-    <RootNamespace>DillonColeman_SkyPayAssessment</RootNamespace>
+    <RootNamespace>DillonColeman_PaySkyAssessment</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
